--- a/README
+++ b/README
@@ -26,3 +26,4 @@ Trying to reuse as much logic as I can between all the different variants.
 
 ## App Demo 
 Link to GitHub project https://github.com/haydenharris0/game
+Playable Link: https://haydenharris0.github.io/game/
